fix overflow en safari ios

--- a/css/main.css
+++ b/css/main.css
@@ -411,6 +411,9 @@ body {
 
 .overflow {
   overflow: hidden;
+  position: fixed;
+  height: 100%;
+  width: 100%;
 }
 
 /*
